2008-05-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Add Marshal format index of spec names,
	versions and platforms.  WIP.
	* lib/rubygems/spec_fetcher.rb:  WIP for replacement of
	Gem::SourceInfoCache and SourceInfoCacheEntry.
	* lib/rubygems/dependency.rb:  Add #=~.

2008-05-07 John Barnette <jbarnette@gmail.com>

	* lib/rubygems/specification.rb, et. al: Let gems have development
	dependencies, which aren't installed (except when --development is
	supplied) or activated.

2008-05-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Refactored into simpler more imperative
	code.
	* lib/rubygems.rb:  Leave rbconfig/datadir.rb for non-RubyGems use.

2008-04-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/server.rb:  Refresh the source index per request so new
	gems will be found after server startup.

2008-04-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb:  Only print out "Bulk updating" when
	verbose, fix #latest_specs documentation.
	* lib/rubygems/dependency_installer.rb:  Add :cache_dir option for
	Tinderbox.

2008-04-14  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/test_utilities.rb:  Expose some internal testing
	utilities that are of general use.

2008-04-10  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Fix Gem.prefix so it reports nil when rubygems.rb
	is in sitelibdir, libdir, or doesn't have 'lib' as a parent directory.
	* doc/release_notes/rel_1_1_1.rdoc:  RubyGems 1.1.1 release notes.
	* lib/rubygems/rubygems_version.rb:  1.1.1.

2008-04-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/server.rb:  Fix fragment URIs.  Patch by James Tucker.
	* lib/rubygems/commands/update_command.rb:  Pass
	--no-format-executable to setup.rb.  Patch by Stephen Bannasch.

2008-04-06  Chad Woolley  <thewoolleyman@gmail.com>

	* lib/rubygems.rb:  Add setter Gems.platforms=, to allow platforms
	to be set/reset when invoking or testing RubyGems programatically.